deny-all-incident-service.yml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all-incident-service
spec:
  selector:
    matchLabels:
      app: user7-incident-service
      group: erd-services
