disaster-simulator-virtualservice.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: disaster-simulator-virtualservice
spec:
  hosts:
  - disaster-simulator.user7.apps.cluster-sm-ilt.sm-ilt.ilt.opentlc.com
  gateways:
  - erd-wildcard-gateway.admin7-istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: user7-disaster-simulator.user7-er-demo.svc.cluster.local
