incident-priority-service-virtualservice.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: incident-priority-service-virtualservice
spec:
  hosts:
  - incident-priority-service.user7.apps.cluster-sm-ilt.sm-ilt.ilt.opentlc.com
  gateways:
  - erd-wildcard-gateway.admin7-istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /priority
    - uri:
        exact: /reset
    route:
    - destination:
        port:
          number: 8080
        host: user7-incident-priority-service.user7-er-demo.svc.cluster.local
