incident-service-external.yml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: incident-service-external
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/admin7-istio-system/sa/istio-ingressgateway-service-account
    to:
    - operation:
        methods:
        - GET
  selector:
    matchLabels:
      app: user7-incident-service
      group: erd-services
