responder-service-virtualservice.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: responder-service-virtualservice
spec:
  hosts:
  - "responder-service.user7.apps.cluster-sm-ilt.sm-ilt.ilt.opentlc.com"
  gateways:
  - erd-wildcard-gateway.admin7-istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /responders
    - uri:
        prefix: /responder
    - uri:
        exact: /stats
    route:
    - destination:
        port:
          number: 8080
        host: user7-responder-service.user7-er-demo.svc.cluster.local
